Полное завершение разработки решения ЭМУЛЯЦИЯ СОБЫТИЙ MOUSEENTER И MOUSELEAVE

--- a/www/Demos/emulateMouseEnterLeave/style.css
+++ b/www/Demos/emulateMouseEnterLeave/style.css
@@ -1,5 +1,5 @@
 section{
-    width:600px;
+    width:900px;
     height:300px;
     padding:50px;
     border:1px solid black;
@@ -14,13 +14,26 @@ div{
 div.animated:first-child {
     background-color:blue;
 }
+div.animated:nth-child(2) {
+    background-color:orange;
+}
+div.animated:nth-child(3) {
+    background-color:tomato;
+}
 div.animated:last-child {
     background-color:green;
 }
 span{
-    width:100px;
+    width:200px;
     height:100px;
-    padding:50px;
+    padding:50px 0;
+    background-color:transparent;
+    border: 1px solid black;
+    display:block;
+}
+a{
+    width:200px;
+    height:100px;
     background-color:transparent;
     border: 1px solid black;
     display:block;
