--- a/www/Demos/plugin.popUp/style.css
+++ b/www/Demos/plugin.popUp/style.css
@@ -81,3 +81,50 @@ button.-green:hover {
 	background:#3b876f;
 	color:#f8f8f9;
 }
+
+/**
+ * Popup styles
+ */
+/* Theme Styles begin */
+.popup {
+	background-color:rgba(0, 0, 0, 0.5); /* Back layer background */
+}
+.popup .centered > .wrapper > .container {
+    margin:1.6666em 2.2222em;
+	border-radius:5px;
+	background-color:#f8f8f9;
+	box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.25);
+}
+/* Popup Header */
+.popup .header {
+    color:#b1a8a6;
+}
+/* --- */
+/* Popup Controls Pannel */
+.popup .controls {
+    padding:0.8333em 0;    
+}
+.popup .controls > a {
+    margin:0 0.8333em;
+}
+.popup .controls .icon {
+    background-image:url(sprite_min.svg);
+	background-repeat:no-repeat;
+    width:32px;
+    height:32px;
+}
+/* Popup Close Button */
+.popup .controls > .close > .icon {
+	background-position: -320px -256px;
+}
+.popup .controls > .close:hover > .icon,
+.popup .controls > .close:active > .icon {
+	background-position: -368px -256px;
+}
+/* --- */
+/* Popup Content */
+.popup .content {
+    clear:both;
+}
+/* --- */
+/* ================ */
