--- a/www/libraries/JavaScript/Plugins/plugin.popUp/plugin.popUp.css
+++ b/www/libraries/JavaScript/Plugins/plugin.popUp/plugin.popUp.css
@@ -1,76 +1,64 @@
-/**
- * Popup styles
- */
-/* general styles */
 .popup,
-.popup > .wrapper {
-	width:100vw;
+.popup .centered > .wrapper {
 	height:100vh;    
 }
-.popup {
-	top:0;
-	left:0;
-	position:fixed;
-	background-color:rgba(0, 0, 0, 0.5); /* Задний фон */
-	z-index:200;
-    display:none;
-}
-.popup.opened {
-	display:block;
-}
-
 .popup > .wrapper,
 .popup > .wrapper > .centered,
 .popup .centered > .wrapper,
 .popup .centered > .wrapper > .container {
     position:relative;
 }
+
+/* The Popup Back Layer */
+.popup {
+	top:0;
+	left:0;
+    width:100%;
+	position:fixed;
+	z-index:200;
+    display:none; /* The popup is closed by default */
+}
+.popup.opened { /* If popup is opened */
+	display:block;
+}
+/* --- */
+
+/* The Floating Popup Centering */
+/* Horizontal */
+.popup > .wrapper,
+.popup > .wrapper > .centered {
+    float:left;
+}
 .popup > .wrapper {
+    left:50%;
+}
+.popup > .wrapper:after {
+    clear: both;
+}
+.popup > .wrapper > .centered {
+    left:-50%;
+}
+/* Vertical */
+.popup .centered > .wrapper {
     display:table-cell;
     vertical-align:middle;
 }
-.popup > .wrapper > .centered {
-    width:100%;
-}
-.popup .centered > .wrapper,
-.popup .centered > .wrapper > .container {
-    float:left;
-}
-.popup .centered > .wrapper {
-    left:50%;
-}
-.popup .centered > .wrapper > .container {
-    left:-50%;
-    margin:1.6666em 2.2222em;
-    /* padding:2.5em 1.6666em; */
-	border-radius:5px;
-	background-color:#f8f8f9;
-	box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.25);
-}
+/* --- */
 
-/* popup Header */
-.popup .header {}
-.popup .title,
-.popup .content {
-    padding:0 2.2222em;
+/* The Popup Container */
+.popup .centered > .wrapper > .container {
+    display:inline-block;
 }
+/* The Popup Controls Pannel */
 .popup .controls {
     position:absolute;
     top:0;
     right:0;
-    padding:0.8333em 0;
 }
 .popup .controls > a {
-    margin:0 0.8333em;
     float:right;
 }
-.popup .controls > a.close > .icon {
-    width:32px;
-    height:32px;
+.popup .controls .icon {
     display:block;
 }
-
-/* popup Content */
-.popup .content {
-    clear:both;
-}
+/* --- */
