--- a/www/libraries/JavaScript/Plugins/plugin.popUp/plugin.popUp.css
+++ b/www/libraries/JavaScript/Plugins/plugin.popUp/plugin.popUp.css
@@ -16,10 +16,17 @@
     width:100%;
 	position:fixed;
 	z-index:200;
-    display:none; /* The popup is closed by default */
+    opacity:0;
+    visibility:hidden; /* The popup is closed by default */
+	-webkit-transition:visibility 0s, opacity 0.25s linear;
+    -moz-transition:visibility 0s, opacity 0.25s linear;
+    -ms-transition:visibility 0s, opacity 0.25s linear;
+    -o-transition:visibility 0s, opacity 0.25s linear;
+    transition:visibility 0s, opacity 0.25s linear;
 }
 .popup.opened { /* If popup is opened */
-	display:block;
+    opacity: 1;
+    visibility:visible;
 }
 /* --- */
 
@@ -31,9 +38,6 @@
 }
 .popup > .wrapper {
     left:50%;
-}
-.popup > .wrapper:after {
-    clear: both;
 }
 .popup > .wrapper > .centered {
     left:-50%;
